<?xml version="1.0"?>
<package format="2">
  <name>scholar_openslam_gmapping</name>
  <version>0.2.1</version>
  <description>)</description>

  <maintainer email="support@verma-robot.com">ROS Orphaned Package Maintainers</maintainer>
  <license>BSD</license>

  <author>Cyrill Stachniss</author>
  <author>Udo Frese</author>
  <author>Giorgio Grisetti</author>
  <author>Wolfram Burgard</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
